--- a/INSTALL
+++ b/INSTALL
@@ -1,13 +1,21 @@
-install requires the following environment variables to be set: 
+If xaifBooster is to be built within OpenAD please see the 
+OpenAD build instructions at 
+www.mcs.anl.gov/OpenAD
 
-XERCESCROOT       the path to the xerces install e.g. XERCESCROOT=/sandbox/xerces-c-src_2_3_0
-BOOSTROOT         the path to the boost install e.g.  BOOSTROOT=/sandbox/boost_1_29_0
-XAIFBOOSTERROOT   the path to the xaifBooster install, i.e. the parent of the xaifBooster directory, 
+If xaifBooster is to be built stand alone 
+the following environment variables to be set: 
+
+XERCESCROOT       the path to the xerces install 
+		  e.g. XERCESCROOT=/sandbox/xerces-c-src_2_3_0
+BOOSTROOT         the path to the boost install 
+		  e.g.  BOOSTROOT=/sandbox/boost_1_29_0
+XAIFBOOSTERROOT   the path to the xaifBooster installation, 
+		  i.e. the *parent* of the xaifBooster directory, 
 		  e.g. XAIFBOOSTERROOT=/sandbox/xaifBooster_current
-
-and for the test driver that uses the ANGEL library: 
-ANGELROOT         the path to the ANGEL install, e.g. ANGELROOT=/sandbox/CVS/angel
-                  Note, in order to build ANGEL for use with xaifBooster edit 
+ANGELROOT         the path to the ANGEL install, 
+	          e.g. ANGELROOT=/sandbox/CVS/angel
+                  Note, that in order to build ANGEL for use i
+                  with xaifBooster edit 
 		  $(ANGELROOT)/specs/lib_usage.conf and make sure
 			CPPFLAGS	+= -DUSE_XAIF
 		  and 
@@ -19,7 +27,7 @@ before any make do:
 
 	cd ${XAIFBOOSTERROOT}/xaifBooster
 
-to make all object files and libraries: 
+to make all object files, support libraries and the main drivers:  
 	make 
 
 to make all test drivers: 
@@ -27,5 +35,4 @@ to make all test drivers:
 
 to create doxygen html files: 
 	make doc
-
 
